- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    4.8.5, 5.2.0
 - 
    None
 - 
    linux x86
 
- 
        1b53fb1b6f00fe6bef787d385dddc48d52b090c6
 
Qmlplugindump will not dump properly registered components like QQuickKeyEvent. It is referenced only from one component which is not creatable. Therefore even creating instances will not help. Please see the listing below line. The root cause is that QQmlMetaType::qmlTypes() returns only subset of registered types - the types with QML Name. (internally the function returns list of all values from map that maps QML name to QQmlType) There should be a new function that will return all registered types. I doubt that it is safe to change the behavior of existing function now. I am going to send a patch soon because it causes a lot of troubles to me. Qt4 suffers from the same problem.
----------------------------------------------------------------------
Component {
        name: "QQuickKeysAttached"
        prototype: "QObject"
        exports: ["QtQuick/Keys 2.0"]
        isCreatable: false
        exportMetaObjectRevisions: [0]
        Enum {
            name: "Priority"
            values: 
        }
        Property 
Property
{ name: "forwardTo"; type: "QQuickItem"; isList: true; isReadonly: true }Property
{ name: "priority"; type: "Priority" }        Signal {
            name: "pressed"
            Parameter 
        }
        Signal {
            name: "released"
            Parameter 
        }
        Signal {
            name: "digit0Pressed"
            Parameter 
        }
        Signal {
            name: "digit1Pressed"
            Parameter 
        }
        Signal {
            name: "digit2Pressed"
            Parameter 
        }
        Signal {
            name: "digit3Pressed"
            Parameter 
        }
        Signal {
            name: "digit4Pressed"
            Parameter 
        }
        Signal {
            name: "digit5Pressed"
            Parameter 
        }
        Signal {
            name: "digit6Pressed"
            Parameter 
        }
        Signal {
            name: "digit7Pressed"
            Parameter 
        }
        Signal {
            name: "digit8Pressed"
            Parameter 
        }
        Signal {
            name: "digit9Pressed"
            Parameter 
        }
        Signal {
            name: "leftPressed"
            Parameter 
        }
        Signal {
            name: "rightPressed"
            Parameter 
        }
        Signal {
            name: "upPressed"
            Parameter 
        }
        Signal {
            name: "downPressed"
            Parameter 
        }
        Signal {
            name: "tabPressed"
            Parameter 
        }
        Signal {
            name: "backtabPressed"
            Parameter 
        }
        Signal {
            name: "asteriskPressed"
            Parameter 
        }
        Signal {
            name: "numberSignPressed"
            Parameter 
        }
        Signal {
            name: "escapePressed"
            Parameter 
        }
        Signal {
            name: "returnPressed"
            Parameter 
        }
        Signal {
            name: "enterPressed"
            Parameter 
        }
        Signal {
            name: "deletePressed"
            Parameter 
        }
        Signal {
            name: "spacePressed"
            Parameter 
        }
        Signal {
            name: "backPressed"
            Parameter 
        }
        Signal {
            name: "cancelPressed"
            Parameter 
        }
        Signal {
            name: "selectPressed"
            Parameter 
        }
        Signal {
            name: "yesPressed"
            Parameter 
        }
        Signal {
            name: "noPressed"
            Parameter 
        }
        Signal {
            name: "context1Pressed"
            Parameter 
        }
        Signal {
            name: "context2Pressed"
            Parameter 
        }
        Signal {
            name: "context3Pressed"
            Parameter 
        }
        Signal {
            name: "context4Pressed"
            Parameter 
        }
        Signal {
            name: "callPressed"
            Parameter 
        }
        Signal {
            name: "hangupPressed"
            Parameter 
        }
        Signal {
            name: "flipPressed"
            Parameter 
        }
        Signal {
            name: "menuPressed"
            Parameter 
        }
        Signal {
            name: "volumeUpPressed"
            Parameter 
        }
        Signal {
            name: "volumeDownPressed"
            Parameter 
        }
    }